--- a/public/og-image.html
+++ b/public/og-image.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">C&C CookieComply</div>
+        <div class="logo">CookieComply</div>
         <div class="tagline">GDPR CMP Setup & Cookie Banner Fixes</div>
         <div class="description">
             Professional compliance solutions for businesses
